Fix missing background image on main page

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    position: relative;
     text-shadow: 1px 1px 2px #000;
 }
 
@@ -465,6 +466,6 @@ body {
     background-position: center center;
     opacity: 0;
     transition: opacity 2s ease-in-out;
-    z-index: -2;
+    z-index: -1;
     pointer-events: none;
 }
